Add Java 12 Switch Expression